More concise layout

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,46 +1,3 @@
-.container {
-  width: auto;
-  max-width: 680px;
-  padding: 0 15px;
-}
-
-.github {
-  padding-left: 32px;
-  background-image: url('../img/octocat-small.png');
-  background-repeat: no-repeat;
-  color:            #fff;
-  background-color: #474949;
-  border-color:     #474949;
-  background-position: 8px center;
-}
-
-.github:hover {
-  color:            #fff;
-  background-color: #333;
-  border-color:     #333;
-}
-
-.pep-navbar {
-  background-color: #eee;
-}
-
-.navbar-default .navbar-nav>.active>a {
-  background-color: #d5d5d5;
-}
-.navbar-default .navbar-nav>.active>a:hover {
-  background-color: #d5d5d5;
-}
-
-
-.post + .post {
-  margin-top: 20px;
-}
-
-pre.highlight {
-  background-color: #eee;
-  border-radius: 10px;
-  border-width: thin;
-  border-style: solid;
-  border-color: #ddd;
-  padding: 5px;
+a {
+  color: #397CCC;
 }
