--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light pep-navbar mb-3">
+<nav class="navbar navbar-expand navbar-light bg-light pep-navbar mb-3">
   <a class="navbar-brand" href="/">
     <img src="/img/schwingung.svg" height="30" />
     PhysiKon
