--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
   <meta name="description" content="Die Jobmesse für Physiker*innen an der TU Dortmund">
   <meta name="author" content="PeP et al. e.V.">
 
+  <!-- CSS -->
   <link href="/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/custom.css" rel="stylesheet">
 </head>
