--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,34 +1,11 @@
-<nav class="navbar navbar-expand navbar-light bg-light pep-navbar mb-3">
-  <a class="navbar-brand" href="/">
-    <img src="/img/schwingung.svg" height="30" />
-    PhysiKon
-  </a>
-  <button type="button" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#pep-navbar-1">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-    <div class="collapse navbar-collapse" id="pep-navbar-1">
-      <ul class="navbar-nav mr-auto">
-        {% for navlink in site.data.navigation %}
-          {% if navlink.submenu %}
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="installDropdown" role="button" data-toggle="dropdown">
-              {{navlink.title}}
-            </a>
-            <div class="dropdown-menu">
-              {% for sublink in navlink.submenu %}
-              <a class="dropdown-item" href="{{ navlink.subdirectory }}/{{ sublink.link }}">
-                {{ sublink.title }}
-              </a>
-              {% endfor %}
-            </div>
-          </li>
-          {% else %}
-          <li class="nav-item {% if page.url == navlink.link %} active {% endif %}" >
-            <a class="nav-link" href="{{ navlink.link }}">{{ navlink.title }}</a>
-          </li>
-          {% endif %}
-        {% endfor %}
-      </ul>
-    </div>
-  </div>
-</nav>
+<header class="card-body-new">
+  <!-- <h1>{{ page.title }}</h1> -->
+  <p class="lead" markdown="1">
+    Am 11. April 2019 findet organisiert von PeP et al. eine Jobmesse für Physiker*innen statt
+    <ul class="lead">
+      <li>Unternehmen aus der Umgebung stellen sich vor und dich ein</li>
+      <li>Das ganze Spektrum der Jobs für Physiker*innen</li>
+      <li>An einem Tag unter einem Dach</li>
+    </ul>
+  </p>
+</header>
