--- a/_layouts/exhibitors_layout.html
+++ b/_layouts/exhibitors_layout.html
@@ -3,10 +3,9 @@
   {% include head.html %}
   <body class="physikon-body">
     {% include navbar.html %}
-    {% include header.html %}
-	{% include carousel.html name="carousel" data=site.data.unternehmen %}
 
-	{% include info.html %}
+	{{ content }}
+
     {% include scripts.html %}
   </body>
 </html>
