cards added, maps added

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,5 +1,7 @@
 <!-- Carousel -->
-<div class=card-body-new>
+<div class="card-body-new">
+<div class="card">
+<div class="card-body-new">
 <div id="{{ include.name }}" class="carousel slide" data-ride="carousel" style="background-color: white">
 
   <!-- Carousel Innner -->
@@ -49,5 +51,8 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+</div>
+</div>
+</div>
 </div>
 </div>
