--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,6 @@
-<nav class="navbar navbar-expand navbar-light bg-light pep-navbar mb-3 navbar-fixed-top" style="background-color: var(--pep-gray) !important">
+<nav class="navbar navbar-expand navbar-collapse navbar-light bg-light mb-3 fixed-top" style="background-color: var(--pep-gray) !important">
   <a class="navbar-brand-new" href="/">
-    <img class="navbar-brand-image" src="/img/schwingung.svg" height="30" />
-    PhysiKon 2019
+    <img class="navbar-brand-image" src="/img/schwingung.svg" height="30" />PhysiKon 2019
   </a>
   <button type="button" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#pep-navbar-1">
     <span class="navbar-toggler-icon"></span>
