--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,6 @@
 <header class="card-body-new">
+<div class="card">
+<div class="card-body-new">
   <!-- <h1>{{ page.title }}</h1> -->
   <p class="lead" markdown="1">
     Am 11. April 2019 findet organisiert von PeP et al. eine Jobmesse für Physiker*innen statt
@@ -8,4 +10,6 @@
       <li>An einem Tag unter einem Dach</li>
     </ul>
   </p>
+</div>
+</div>
 </header>
