--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     {% include navbar.html %}
     {% include header.html %}
 	{% include carousel.html name="carousel" data=site.data.unternehmen %}
-
+	{% include map.html %}
 	{% include info.html %}
     {% include scripts.html %}
   </body>
