--- a/_includes/organisation.html
+++ b/_includes/organisation.html
@@ -18,11 +18,11 @@
             <a href="https://pep-dortmund.org">Homepage</a>
           </div>
         
-
-        </div>
-        <div align="center" class="pt-5 mb-1">
+          <div align="center" class="pt-5 pb-5 mb-1">
           <img style="max-width: 300px;" class="card-img-bottom" src="img/pep.svg" alt="<unternehmen>">
         </div>
+        </div>
+
       </div>
     </div>
 
