--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
     {% include navbar.html %}
     {% include header.html %}
 	{% include carousel.html name="carousel" data=site.data.unternehmen %}
-	{% include map.html %}
-	{% include info.html %}
+	{% include location_map.html %}
+	{% include organisation.html %}
     {% include scripts.html %}
   </body>
 </html>
