--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="card-body-new">
-<div class="card">
+<div class="card pt-1">
 <div class="card-body-new">
   <!-- <h1>{{ page.title }}</h1> -->
   <p class="lead" markdown="1">
