--- a/css/custom.css
+++ b/css/custom.css
@@ -132,15 +132,20 @@ a {
   display: block;
   padding: 0.5rem 1rem;
   text-align: right;
+  font-size: 25px;
+  color: var(--pep-yellow) !important;
 }
 
+.nav-link:hover {
+  opacity: .6;
+}
 
 
 /* Physikon Body */
 .physikon-body {
 	background-color: #f1f0f0;
 	/*background-color: var(--pep-yellow);*/
-	padding-top: 100px;
+	padding-top: 110px;
 	font-family: "Lato";
 	font-weight: 400;
 }
@@ -150,7 +155,7 @@ a {
   flex: 1 1 auto;
   padding: 1.25rem;
   background-color: white;
-  border: 5px solid white;
+  border: 8px solid white;
   border-radius: 5px;
   width: 95%;
   margin-left: auto;
