--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <div class="card pt-1">
 <div class="card-body-new">
   <!-- <h1>{{ page.title }}</h1> -->
-  <p class="lead" markdown="1">
+  <p class="lead" markdown="1" style="font-weight: 500">
     Am 11. April 2019 findet organisiert von PeP et al. eine Jobmesse für Physiker*innen statt
     <ul class="lead">
       <li>Unternehmen aus der Umgebung stellen sich vor und dich ein</li>
