css update, small changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   {% include head.html %}
-  <body class="physikon-body">
+  <body>
     {% include navbar.html %}
     {% include header.html %}
 	{% include carousel.html name="carousel" data=site.data.unternehmen %}
