--- a/_layouts/exhibitors_layout.html
+++ b/_layouts/exhibitors_layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   {% include head.html %}
-  <body class="physikon-body">
+  <body>
     {% include navbar.html %}
 
 	{{ content }}
