--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,17 @@
 <head>
   <meta charset="utf-8">
+
+  <!-- Title -->
   <title>Pep et al. e.V. PhysiKon</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Die Jobmesse für Physiker*innen an der TU Dortmund">
   <meta name="author" content="PeP et al. e.V.">
 
   <!-- CSS -->
+  <!-- Add version number as GET parameter. CSS will be refreshed in every visitor's cache. -->
   <link href="/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/css/custom.css" rel="stylesheet">
+  <link href="/css/custom.css?version=51" rel="stylesheet">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
