--- a/_includes/location_map.html
+++ b/_includes/location_map.html
@@ -6,13 +6,12 @@
 <div class="col-12 col-lg-6 mb-3">
 <div class="card">
 <div class="card-body-new">
-<h5 class="card-title">Übersicht</h5>
 
 <!-- Übersicht (Datum, Uhrzeit, Ort-->
-  <div class="container pt-5 pl-0 pr-0">
+  <div class="container pt-0 pl-0 pr-0">
   <div class="row">
     <div class="col-sm">
-      <h5><i class="fas fa-location-arrow"></i> Location</h5>
+      <h5><i class="fas fa-location-arrow"></i> Ort</h5>
       <p >Vogelpothsweg 118, 44227 Dortmund </p>
     </div>
     <div class="col-sm">
