--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand navbar-collapse navbar-light bg-light mb-3 fixed-top" style="background-color: var(--pep-gray) !important">
+<nav class="navbar navbar-expand-lg navbar-collapse navbar-light bg-light mb-3 fixed-top" style="background-color: var(--pep-gray) !important">
   <a class="navbar-brand-new" href="/">
     <img class="navbar-brand-image" src="/img/schwingung.svg" height="30" />PhysiKon 2019
   </a>
