roboto font working, logo edit, small fixes

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-collapse navbar-light bg-light mb-3 fixed-top" style="background-color: var(--pep-gray) !important">
   <a class="navbar-brand-new" href="/">
-    <img class="navbar-brand-image" src="/img/schwingung.svg" height="30" />PhysiKon 2019
+    <img class="navbar-brand-image" src="/img/schwingung.svg">
+    Physi<span style="color: var(--pep-yellow)">Kon</span> 2019
   </a>
   <button type="button" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#pep-navbar-1">
     <span class="navbar-toggler-icon"></span>
