--- a/_includes/organisation.html
+++ b/_includes/organisation.html
@@ -1,10 +1,6 @@
-<main class="card-body-new">
-
-  <div class="row">
-
-    <div class="col-12 mb-3">
+<div class="card-body-new">
       <div class="card">
-        <div class="card-body">
+        <div class="card-body-new">
           <h5 class="card-title">Organisation</h5>
           <p> Organisiert wird die Physikon von PeP et. al., dem Alumniverein der Physik.</p>
 
@@ -16,14 +12,9 @@
 
           <p> Weitere Informationen zu PeP et al. findet ihr auf unserer</p>
             <a href="https://pep-dortmund.org">Homepage</a>
-          </div>
         
           <div align="center" class="pt-5 pb-5 mb-1">
           <img style="max-width: 300px;" class="card-img-bottom" src="img/pep.svg" alt="<unternehmen>">
-        </div>
-        </div>
-
-      </div>
-    </div>
-
-  </div>
+</div>
+</div>
+</div>
