--- a/css/custom.css
+++ b/css/custom.css
@@ -6,6 +6,16 @@
 	--pep-yellow: #FFB137;
 }
 
+/* Body (font-family etc.) */
+body {
+    background-color: #f1f0f0;
+    /*background-color: var(--pep-yellow);*/
+    padding-top: 110px;
+    font-family: Roboto !important;
+    font-weight: 400;
+}
+
+
 /* choose primary, secondary background-colors */
 .bg-primary {
 	background-color: var(--pep-blue) !important;
@@ -33,13 +43,6 @@ hr.star-light:after {
 	background-color: var(--pep-blue);
 }
 
-body {
-    background-color: #f1f0f0;
-    /*background-color: var(--pep-yellow);*/
-    padding-top: 110px;
-    font-family: Roboto;
-    font-weight: 400;
-}
 
 h1 {
 	font-weight: 600;
@@ -119,16 +122,16 @@ a {
 	white-space: nowrap;
 	text-decoration: none;
 	color: white;
-	font-family: "Lato";
+	font-family: Roboto !important;
 	font-weight: 600;
 	font-size: 35px;
-	text-decoration: underline var(--pep-blue);
+	text-decoration: underline var(--pep-yellow);
 }
 
 /* Wellenpaket schließt mit Unterstrich vom Title ab */
 .navbar-brand-image {
 	height: 50px;
-	margin-top: 24px;
+	/*margin-top: 24px;*/
 	color: var(--pep-blue);
 }
 
@@ -145,7 +148,6 @@ a {
 }
 
 
-/* Physikon Body */
 .card-body-new {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
@@ -160,4 +162,9 @@ a {
 
 .lead {
 	font-weight: 320;
+}
+
+/* OpenStreetMap*/
+.map-iframe {
+    width: 100%;
 }
