--- a/_includes/information.html
+++ b/_includes/information.html
@@ -23,6 +23,9 @@
     </div>
   </div>
 
+  <p>Die PhysiKon 2019 findet im Campus-Treff der TU Dortmund statt.</p>
+  <img src="img/campus-treff.jpg" style="width: 100%">
+
 <!-- Close first column -->
 </div>
 </div>
