--- a/_layouts/exhibitors_layout.html
+++ b/_layouts/exhibitors_layout.html
@@ -4,7 +4,7 @@
   <body>
     {% include navbar.html %}
 
-	{{ content }}
+	{% include exhibitors.html %}
 
     {% include scripts.html %}
   </body>
