--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -2,7 +2,7 @@
 <div class="card-body-new">
 <div class="card">
 <div class="card-body-new">
-<div id="{{ include.name }}" class="carousel slide" data-ride="carousel" style="background-color: white">
+<div id="{{ include.name }}" class="carousel slide" data-ride="carousel">
 
   <!-- Carousel Innner -->
   <div class="carousel-inner" style="height: 350px !important; border-top:50px green !important">
