--- a/_includes/organisation.html
+++ b/_includes/organisation.html
@@ -10,8 +10,8 @@
           <p> Ansprechpartner für die PhysiKon sind Henning Moldenhauer und Lena Linhoff,
           Kontakt unter <a href="mailto:physikon@pep-dortmund.org">physikon@pep-dortmund.org</a>.</p>
 
-          <p> Weitere Informationen zu PeP et al. findet ihr auf unserer</p>
-            <a href="https://pep-dortmund.org">Homepage</a>
+          <p> Weitere Informationen zu PeP et al. findet ihr auf unserer
+            <a href="https://pep-dortmund.org">Homepage</a></p>
         
           <div align="center" class="pt-5 pb-5 mb-1">
           <img style="max-width: 300px;" class="card-img-bottom" src="img/pep.svg" alt="<unternehmen>">
