--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -13,7 +13,7 @@
 
   <h3>Ihr Stand auf der PhysiKon</h3>
   <p>
-  Für die Ausstellergebühr von 500€ bieten wir Ihnen das folgende Rundum-Sorglos-Paket</p>
+  Für die Ausstellergebühr von 500€ bieten wir Ihnen das folgende Rundum-Sorglos-Paket:</p>
 
   <h5>Messestand</h5>  
   <p>
