--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,7 +6,7 @@
   <button type="button" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#pep-navbar-1">
     <span class="navbar-toggler-icon"></span>
   </button>
-    <div class="collapse navbar-collapse" id="pep-navbar-1">
+    <div class="collapse navbar-collapse pl-3" id="pep-navbar-1">
       <ul class="navbar-nav mr-auto">
         {% for navlink in site.data.navigation %}
           {% if navlink.submenu %}
