--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,12 +2,15 @@
 <div class="card pt-1">
 <div class="card-body-new">
   <p class="lead" markdown="1" style="font-weight: 500">
+    <p class="text-center">
+    <img class="navbar-brand-image" src="/img/logo2.svg"></p>
+    <p class="text-center">
     Am <b>11. April 2019</b> findet organisiert von PeP et al. eine Jobmesse für Physiker*innen statt
-    <ul class="lead">
+    <ul class="lead text-center">
       <li>Unternehmen aus der Umgebung stellen sich vor und dich ein</li>
       <li>Das ganze Spektrum der Jobs für Physiker*innen</li>
       <li>An einem Tag unter einem Dach</li>
-    </ul>
+    </ul></p>
   </p>
 </div>
 </div>
