--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-collapse navbar-light bg-light mb-3 fixed-top" style="background-color: var(--pep-gray) !important">
   <a class="navbar-brand-new" href="/">
-    <img class="navbar-brand-image" src="/img/schwingung.svg">
+    <img class="navbar-brand-image" src="/img/logo2_white.svg">
     Physi<span style="color: var(--maincolor)">Kon</span> 2019
   </a>
   <button type="button" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#pep-navbar-1">
