freelancer like update

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,9 @@
   <!-- Add version number as GET parameter. CSS will be refreshed in every visitor's cache. -->
   <link href="/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/custom.css?version=51" rel="stylesheet">
+  <link href="/css/freelancer.min.css" rel="stylesheet">
+  <link href="/css/freelancer.css" rel="stylesheet">
+
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
