--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,16 @@
-<header class="card-body-new">
-<div class="card pt-1">
-<div class="card-body-new">
-  <p class="lead" markdown="1" style="font-weight: 500">
-    <p class="text-center">
-    <img class="navbar-brand-image" src="/img/logo2.svg"></p>
-    <p class="text-center">
-    Am <b>11. April 2019</b> findet organisiert von PeP et al. eine Jobmesse für Physiker*innen statt
-    <ul class="lead text-center">
-      <li>Unternehmen aus der Umgebung stellen sich vor und dich ein</li>
-      <li>Das ganze Spektrum der Jobs für Physiker*innen</li>
-      <li>An einem Tag unter einem Dach</li>
-    </ul></p>
-  </p>
-</div>
-</div>
-</header>
+    <!-- Header -->
+    <header class="masthead bg-primary text-white text-center">
+      <div class="container">
+        <!-- <img class="img-fluid mb-5 d-block mx-auto" src="img/logo2_white.svg" alt="" style="height: 150px"> -->
+        <h1 class="mb-0" style="color: var(--pep-blue)">LOGO</h1>
+        <h1 class="mb-0">Jobmesse für Physikstudierende</h1>
+        <hr class="star-light">
+
+<!--             <ul class="lead text-center" style="list-style: none">
+      <li><h2 class="font-weight-light mb-0">Unternehmen aus der Umgebung stellen sich vor und dich ein</h2></li>
+      <li><h2 class="font-weight-light mb-0">Das ganze Spektrum der Jobs für Physiker*innen</h2></li>
+      <li><h2 class="font-weight-light mb-0">An einem Tag unter einem Dach</h2></li>
+    </ul> -->
+        <h2 class="font-weight-light mb-0">Unternehmen aus der Umgebung stellen sich vor und dich ein</h2>
+      </div>
+    </header>
