--- a/_includes/organisation.html
+++ b/_includes/organisation.html
@@ -1,20 +1,20 @@
-<div class="card-body-new">
-      <div class="card">
-        <div class="card-body-new">
-          <h5 class="card-title">Organisation</h5>
-          <p> Organisiert wird die Physikon von PeP et. al., dem Alumniverein der Physik.</p>
+<!-- organisation.html-->
+<div class="container text-center text-gray">
 
-          <p> Eines der Hauptziele von PeP ist es, den Kontakt zwischen Alumni, Wirtschaft
-          und Studierenden zu fördern und die PhysiKon ist die ideale Gelegenheit dazu.</p>
+<!-- organisation Header -->
+<h2 class="text-center text-gray text-uppercase text-secondary mb-0 h2-fontsize">Organisation</h2>
+<hr class="star-dark mb-5">
 
-          <p> Ansprechpartner für die PhysiKon sind Henning Moldenhauer und Lena Linhoff,
-          Kontakt unter <a href="mailto:physikon@pep-dortmund.org">physikon@pep-dortmund.org</a>.</p>
+<p class="p-fontsize"> Organisiert wird die Physikon von PeP et. al., dem Alumniverein der Physik.</p>
 
-          <p> Weitere Informationen zu PeP et al. findet ihr auf unserer
-            <a href="https://pep-dortmund.org">Homepage</a></p>
-        
-          <div align="center" class="pt-5 pb-5 mb-1">
-          <img style="max-width: 300px;" class="card-img-bottom" src="img/pep.svg" alt="<unternehmen>">
-</div>
-</div>
-</div>
+<p class="p-fontsize"> Eines der Hauptziele von PeP ist es, den Kontakt zwischen Alumni, Wirtschaft
+und Studierenden zu fördern und die PhysiKon ist die ideale Gelegenheit dazu.</p>
+
+<p class="p-fontsize"> Ansprechpartner für die PhysiKon sind Henning Moldenhauer und Lena Linhoff,
+Kontakt unter <a href="mailto:physikon@pep-dortmund.org">physikon@pep-dortmund.org</a>.</p>
+
+<p class="p-fontsize"> Weitere Informationen zu PeP et al. findet ihr auf unserer
+<a href="https://pep-dortmund.org">Homepage</a></p>
+
+<div align="center" class="pt-5 pb-5 mb-1">
+<img style="max-width: 300px;" class="card-img-bottom" src="img/pep.svg" alt="<unternehmen>">
