--- a/_layouts/index_layout.html
+++ b/_layouts/index_layout.html
@@ -3,12 +3,10 @@
   {% include head.html %}
   <body>
     {% include navbar.html %}
-
     {% include header.html %}
-	{% include carousel.html name="carousel" data=site.data.unternehmen %}
-	{% include information.html %}
-	{% include organisation.html %}
-
+    {% include carousel.html data=site.data.unternehmen name="carousel" %}
+    {% include information.html %}
+    {% include organisation.html %}
     <!-- Scripts -->
     {% include scripts.html %}
   </body>
