--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,7 +1,11 @@
+<!-- carousel.html-->
+<section class="container text-center">
+
+<!-- Carousel Header -->
+<h2 class="text-center text-gray text-uppercase text-secondary mb-0 h2-fontsize">Unternehmen</h2>
+<hr class="star-dark mb-5">
+
 <!-- Carousel -->
-<div class="card-body-new">
-<div class="card">
-<div class="card-body-new">
 <div id="{{ include.name }}" class="carousel slide" data-ride="carousel">
 
   <!-- Carousel Innner -->
@@ -53,5 +57,4 @@
   </a>
 </div>
 </div>
-</div>
-</div>
+</section>
