--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -1,17 +1,16 @@
-<div class="card-body-new">
-<div class="card">
-<div class="card-body-new">
-<header class="container">
-  <h2>Möchten Sie Physiker*innen für Ihr Unternehmen gewinnen?</h2>
-  <p class="lead">
+<header class="masthead bg-primary text-white text-center">
+  <div class="container">
+  <h2 class="h2-fontsize mb-0">Möchten Sie Physiker*innen für Ihr Unternehmen gewinnen?</h2>
+  <p class="p-fontsize">
   
-  Die PhysiKon bietet Ihnen die Gelegenheit, Ihr Unternehmen für Absolventen und 
+  Die Physi<span style="color: var(--maincolor); font-weight: 600">Kon</span> 2019 bietet Ihnen die Gelegenheit, Ihr Unternehmen für Absolventen und 
   Absolventinnen der Physik attraktiv zu präsentieren.</p>
+</div>
 </header>
 
-<main class="container">
+<div class="container pt-5">
 
-  <h3>Ihr Stand auf der PhysiKon</h3>
+  <h3>Ihr Stand auf der Physi<span style="color: var(--maincolor); font-weight: 600">Kon</span></h3>
   <p>
   Für die Ausstellergebühr von 500€ bieten wir Ihnen das folgende Rundum-Sorglos-Paket:</p>
 
