--- a/_includes/information.html
+++ b/_includes/information.html
@@ -1,52 +1,34 @@
-<!-- Information (Datum, Uhrzeit, Ort) + OpenStreetMap-->
-<div class="card-body-new">
-<div class="row">
+<!-- information.html-->
+<section class="bg-primary mb-5 mt-5">
+<div class="container text-center text-white pb-5">
 
-<!-- First column (Datum, Uhrzeit, Ort) -->
-<div class="col-12 col-lg-6 mb-3">
-<div class="card">
-<div class="card-body-new">
+<!-- Information Header -->
+<h2 class="text-center text-white text-uppercase mb-0 h2-fontsize">Informationen</h2>
+<hr class="star-light mb-5">
 
-<!-- Übersicht (Datum, Uhrzeit, Ort-->
-  <div class="row">
+  <div class="row pb-5">
     <div class="col-sm">
-      <h5><i class="fas fa-location-arrow"></i> Ort</h5>
-      <p >Vogelpothsweg 118, 44227 Dortmund </p>
+      <h3><i class="fas fa-location-arrow"></i> Ort</h3>
+      <p><h5>Vogelpothsweg 118, 44227 Dortmund</h5></p>
     </div>
     <div class="col-sm">
-      <h5><i class="fas fa-calendar-alt"></i> Datum</h5>
-      <p> 04. April 2019
+      <h3><i class="fas fa-calendar-alt"></i> Datum</h3>
+      <p><h5> 04. April 2019</h5>
     </div>
     <div class="col-sm">
-      <h5><i class="fas fa-clock"></i> Uhrzeit</h5>
-      <p> 10 - 16 Uhr</p>
+      <h3><i class="fas fa-clock"></i> Uhrzeit</h3>
+      <p><h5> 10 - 16 Uhr</h5></p>
     </div>
   </div>
 
-  <p>Die PhysiKon 2019 findet im Campus-Treff der TU Dortmund statt.</p>
-  <img src="img/campus-treff.jpg" style="width: 100%">
 
-<!-- Close first column -->
-</div>
-</div>
-</div>
 
-<!-- Second column: OpenStreetMap -->
-<div class="col-12 col-lg-6 mb-3">
-	<div class="card">
-	<div class="card-body-new">
-		<h5 class="card-title">Karte</h5>
+<!-- Anfahrt Header -->
+<h2 class="text-center text-white text-uppercase mb-0 h2-fontsize">Anfahrt</h2>
+<hr class="star-light mb-5">
 
-<!-- Include map -->
 {% include map.html %}
 
-<!-- Close second column -->
 </div>
 </div>
-</div>
-
-<!-- Close all -->
-</div>
-</div>
-</div>
-
+</section>
