--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,34 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-collapse navbar-light bg-light mb-3 fixed-top" style="background-color: var(--pep-gray) !important">
-  <a class="navbar-brand-new" href="/">
-    <img class="navbar-brand-image" src="/img/logo2_white.svg">
-    Physi<span style="color: var(--maincolor)">Kon</span> 2019
-  </a>
-  <button type="button" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#pep-navbar-1">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-    <div class="collapse navbar-collapse pl-3" id="pep-navbar-1">
-      <ul class="navbar-nav mr-auto">
-        {% for navlink in site.data.navigation %}
-          {% if navlink.submenu %}
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="installDropdown" role="button" data-toggle="dropdown">
-              {{ navlink.title }}
-            </a>
-            <div class="dropdown-menu">
-              {% for sublink in navlink.submenu %}
-              <a class="dropdown-item" href="{{ navlink.subdirectory }}/{{ sublink.link }}">
-                {{ sublink.title }}
-              </a>
-              {% endfor %}
-            </div>
-          </li>
-          {% else %}
-          <li class="nav-item {% if page.url == navlink.link %} active {% endif %}">
-            <a class="nav-link" href="{{ navlink.link }}">{{ navlink.title }}</a>
-          </li>
-          {% endif %}
-        {% endfor %}
-      </ul>
-    </div>
-  </div>
-</nav>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="/index">Physi<span style="color: var(--maincolor)">Kon</span> 2019</a>
+        <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+
+          <!-- Navbar Items-->
+         <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="exhibitors.html">Für Unternehmen</a>
+          </ul>
+        </div>
+      </div>
+    </nav>
