--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,2 +1,5 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/freelancer.min.js"></script>
+<script src="js/jqBootstrapValidation.js"></script>
+<script src="js/jqBootstrapValidation.min.js"></script>
