--- a/css/custom.css
+++ b/css/custom.css
@@ -5,11 +5,13 @@
 	--pep-green: #2CCCA0;
 	--pep-yellow: #FFB137;
     --maincolor: var(--pep-yellow);
+    --body-bg: #f1f0f0;
+    --body-bg: white;
 }
 
 /* Body (font-family etc.) */
 body {
-    background-color: #f1f0f0;
+    background-color: var(--body-bg);
     /*background-color: var(--pep-yellow);*/
     padding-top: 110px;
     font-family: Roboto !important;
@@ -110,6 +112,11 @@ a {
   background-color: var(--maincolor);
 }
 
+.carousel-control-next,
+.carousel-control-prev {
+    width: 10% !important;
+}
+
 
 
 /* Navbar */
@@ -140,13 +147,17 @@ a {
   display: block;
   padding: 0.5rem 1rem;
   text-align: right;
-  font-size: 25px;
-  color: var(--maincolor) !important;
+  font-size: 20px;
+  color: white !important;
 }
 
 .nav-link:hover {
-  opacity: .6;
-  color: white !important;
+  opacity: 1;
+  color: var(--pep-yellow) !important;
+}
+
+.text-gray {
+    color: var(--pep-gray) !important;
 }
 
 
@@ -169,4 +180,12 @@ a {
 /* OpenStreetMap*/
 .map-iframe {
     width: 100%;
+}
+
+.h2-fontsize {
+    font-size: 2.7rem !important;
+}
+
+.p-fontsize {
+    font-size: 20px !important;
 }
