--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <!-- <img class="img-fluid mb-5 d-block mx-auto" src="img/logo2_white.svg" alt="" style="height: 150px"> -->
+        <img class="img-fluid mb-5 d-block mx-auto" src="img/logo3.bmp" alt="" style="height: 250px">
         <h1 class="mb-0" style="color: var(--pep-blue)">LOGO</h1>
         <h1 class="mb-0">Jobmesse für Physikstudierende</h1>
         <hr class="star-light">
