--- a/_layouts/index_layout.html
+++ b/_layouts/index_layout.html
@@ -5,6 +5,7 @@
     {% include navbar.html %}
     {% include header.html %}
     {% include carousel.html data=site.data.unternehmen name="carousel" %}
+    {% include grid.html %}
     {% include information.html %}
     {% include organisation.html %}
     <!-- Scripts -->
