--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,15 +2,20 @@
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto" src="img/logo3.bmp" alt="" style="height: 250px">
-<!--         <h1 class="mb-0" style="color: var(--pep-blue)">LOGO</h1> -->
+
         <h1 class="mb-0">Jobmesse für Physikstudierende</h1>
         <hr class="star-light">
 
-<!--             <ul class="lead text-center" style="list-style: none">
-      <li><h2 class="font-weight-light mb-0">Unternehmen aus der Umgebung stellen sich vor und dich ein</h2></li>
-      <li><h2 class="font-weight-light mb-0">Das ganze Spektrum der Jobs für Physiker*innen</h2></li>
-      <li><h2 class="font-weight-light mb-0">An einem Tag unter einem Dach</h2></li>
-    </ul> -->
-        <h2 class="font-weight-light mb-0">Unternehmen aus der Umgebung stellen sich vor und dich ein</h2>
+
+
+        <h2 class="font-weight-light mb-0"><p>Du bist auf der Suche nach einem Job nach dem Studium, einem Praktikum oder Werkstudentenjob? </p></h2>
+
+        <h2 class="font-weight-light mb-0"><p>Oder du möchtest dich einfach mal informieren, was du mit einem Physik-Studium alles anfangen kannst?</p></h2>
+
+        <h2 class="font-weight-light mb-0"><p>Dann komm vorbei! </p></h2>
+
+        <h2 class="font-weight-light mb-0"><p>Unternehmen aus der Umgebung stellen sich vor und dich ein</p></h2>
+
+        <h2 class="mb-0"><p>Am <span style="color: var(--pep-yellow)">11. April 2019</span> veranstaltet PeP et al. die erste Jobmesse für Physiker/innen an der TU Dortmund. </p></h2>
       </div>
     </header>
