--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -218,11 +218,11 @@ header.masthead h2 {
   -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  background-color: rgba(24, 188, 156, 0.9);
+  background-color: var(--pep-gray);
 }
 
 .portfolio .portfolio-item .portfolio-item-caption:hover {
-  opacity: 1;
+  opacity: .3;
 }
 
 .portfolio .portfolio-item .portfolio-item-caption .portfolio-item-caption-content {
