--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -28,19 +28,21 @@
     {% for image in include.data %}
     {% if forloop.first == true %}
     <div class="carousel-item active">
+      <a href="{{ image.url2 }}">
       <img class="carousel-img-new" src="{{ image.url }}" alt="{{ image.title }}">
          <div class="carousel-caption-new">
         <h5>{{ image.title }}</h5>
         <p>{{ image.caption }}</p>
-        </div>
+        </div></a>
     </div>
     {% else %}
     <div class="carousel-item">
+      <a href="{{ image.url2 }}">
       <img class="carousel-img-new" src="{{ image.url }}" alt="{{ image.title }}">
         <div class="carousel-caption-new">
         <h5>{{ image.title }}</h5>
         <p>{{ image.caption }}</p>
-        </div>
+        </div></a>
     </div>
     {% endif %}
     {% endfor %}
