--- a/_includes/information.html
+++ b/_includes/information.html
@@ -9,7 +9,7 @@
   <div class="row pb-5">
     <div class="col-sm">
       <h3><i class="fas fa-location-arrow"></i> Ort</h3>
-      <p><h5>Vogelpothsweg 118</h5></p>
+      <p><h5 class="info-hover">Vogelpothsweg 118</h5></p>
       <p><h5>44227 Dortmund</h5></p>
     </div>
     <div class="col-sm">
