--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,14 +8,26 @@
 
 
 
-        <h2 class="font-weight-light mb-0"><p>Du bist auf der Suche nach einem Job nach dem Studium, einem Praktikum oder Werkstudentenjob? </p></h2>
+        <div class="container">
+        <div class="row">
+            <div class="col lg-2">
 
-        <h2 class="font-weight-light mb-0"><p>Oder du möchtest dich einfach mal informieren, was du mit einem Physik-Studium alles anfangen kannst?</p></h2>
+            <h2 class="font-weight-light mb-0"><p>Du bist auf der Suche nach einem Job nach dem Studium, einem Praktikum oder Werkstudentenjob? </p></h2>
 
-        <h2 class="font-weight-light mb-0"><p>Dann komm vorbei! </p></h2>
+            </div>
 
-        <h2 class="font-weight-light mb-0"><p>Unternehmen aus der Umgebung stellen sich vor und dich ein</p></h2>
+            <div class="col lg-2">
 
-        <h2 class="mb-0"><p>Am <span style="color: var(--pep-yellow)">11. April 2019</span> veranstaltet PeP et al. die erste Jobmesse für Physiker/innen an der TU Dortmund. </p></h2>
+            <h2 class="font-weight-light mb-0"><p>Oder du möchtest dich einfach mal informieren, was du mit einem Physik-Studium alles anfangen kannst?</p></h2>
+
+         </div>
+        </div>
+    </div>
+
+        <h2 class="mb-0" style="font-size: 2rem"><p>Dann komm vorbei! </p></h1>
+<!-- 
+        <h2 class="font-weight-light mb-0"><p>Unternehmen aus der Umgebung stellen sich vor und dich ein</p></h2> -->
+
+<!--         <h2 class="mb-0"><p>Am <span style="color: var(--pep-yellow)">11. April 2019</span> veranstaltet PeP et al. die erste Jobmesse für Physiker/innen an der TU Dortmund. </p></h2> -->
       </div>
     </header>
