schwingung in hr, symbole verkleinert, effekte carousel/grid entfernt

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
+<!--         <img class="img-fluid mb-5 d-block mx-auto" src="img/tudo_physik.png" alt="" style="height: 100%"> -->
         <img class="img-fluid mb-5 d-block mx-auto" src="img/logo3.bmp" alt="" style="height: 250px">
 
         <h1 class="mb-0">Jobmesse für Physikstudierende</h1>
