--- a/css/custom.css
+++ b/css/custom.css
@@ -191,24 +191,24 @@ a {
 }
 
 .mh200 {
-  max-height: 200px;
+  max-height: 125px;
 }
 
 /* Carousel hover*/
-.carousel-item active:hover,
+/*.carousel-item active:hover,
 .carousel-item:hover {
   transition: all ease 0.5s;
   opacity: .75;
   transform: scale(1.05);
-}
+}*/
 
 /* Grid hover*/
-.hover-image:hover {
+/*.hover-image:hover {
   transition: all ease 0.5s;
   opacity: .75;
   transform: scale(1.05);
 }
-
+*/
 /* Info Hover*/
 .info-hover:hover {
   transition: all ease 0.25s;
