--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,9 @@
   <link href="/css/freelancer.min.css" rel="stylesheet">
   <link href="/css/freelancer.css" rel="stylesheet">
 
+  <!-- OpenStreetMap -->
+  <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/css/ol.css" type="text/css">
+
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
