--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,6 +1,37 @@
 <!-- class map-iframe in custom.css -->
-<div class="map-iframe">
+<!-- OpenLayers -->
+<link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/css/ol.css" type="text/css">
+<script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/build/ol.js"></script>
 
-<iframe width="100%" height="350px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=7.41628646850586%2C51.4914242132962%2C7.419467568397523%2C51.49436670861605&amp;layer=mapnik&amp;marker=51.49289548469737%2C7.417877018451691" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=51.49290&amp;mlon=7.41788#map=18/51.49290/7.41788">Größere Karte anzeigen</a></small>
+<div id="map" class="map-iframe"></div>
 
-</div>
+
+<!-- Skript -->
+<script type="text/javascript">
+var baseMapLayer = new ol.layer.Tile({
+  source: new ol.source.OSM()
+});
+var map = new ol.Map({
+  interactions: ol.interaction.defaults({mouseWheelZoom:false}),
+  target: 'map',
+  layers: [ baseMapLayer],
+  view: new ol.View({
+          center: ol.proj.fromLonLat([7.41721, 51.49290]), // Genauen Ort hinzufügen
+          zoom: 16 //Initial Zoom Level
+        })
+});
+
+//Adding a marker on the map
+var marker = new ol.Feature({
+  geometry: new ol.geom.Point(
+    ol.proj.fromLonLat([7.41721, 51.49290])
+  ),  
+});
+var vectorSource = new ol.source.Vector({
+  features: [marker]
+});
+var markerVectorLayer = new ol.layer.Vector({
+  source: vectorSource,
+});
+map.addLayer(markerVectorLayer);
+</script>
