--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
 <!--         <img class="img-fluid mb-5 d-block mx-auto" src="img/tudo_physik.png" alt="" style="height: 100%"> -->
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/logo3.bmp" alt="" style="height: 250px">
+        <img class="img-fluid mb-5 d-block mx-auto" src="img/schwingung.svg" alt="" style="height: 250px">
 
         <h1 class="mb-0">Jobmesse für Physikstudierende</h1>
         <hr class="star-light">
