--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -39,9 +39,9 @@ hr.star-dark:after {
   display: inline-block;
   padding: 0 0.55em;
   /*padding-bottom: 150px;*/
-  /*content: '\f0c3';*/
+  content: '\f508';
   /*font-family: "Font Awesome 5 Free";*/
-  content: url(/img/schwingung.svg);
+  /*content: url(/img/schwingung.svg);*/
 
   /* CSS Magic ... */
   transform: scale(.9);
