--- a/css/custom.css
+++ b/css/custom.css
@@ -233,3 +233,27 @@ a {
 /*#map {
   pointer-events: none;
 }*/
+
+
+/* Work Around für das Tie-Logo */
+/* Hintergrund (Farbe der Krawatte) ist über .tie-logo-background zu steuern */
+/* Umgebung (Quadrat) durch .tie-logo */
+/* Falls nur Krawatte sichtbar sein soll: color in .tie-logo zu var(--pep-gray) ändern */
+/* (s. Kommentare; die dann entkommentieren bzw. color/background-color auskommentieren) */
+
+.tie-logo {
+  padding-right: 5px;
+  /*color: var(--pep-gray);*/
+  color: var(--pep-yellow);
+  z-index: 2;
+}
+
+.tie-logo-background {
+  position: absolute;
+  /*background-color: var(--pep-yellow);*/
+  background-color: white;
+  width: 30px;
+  height: 35px;
+  margin-left: 3px;
+  z-index: 1;
+}
