--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,35 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
-      <div class="container">
-<!--         <img class="img-fluid mb-5 d-block mx-auto" src="img/tudo_physik.png" alt="" style="height: 100%"> -->
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/schwingung.svg" alt="" style="height: 250px">
+
+            <!-- Webseiten-Logo -->
+            <!-- Kombination aus fa-black-tie, Schriftzug und TU-Logo -->
+            <div class="jumbotron jumbotron-fluid physikon-jumbotron">
+
+            <!-- Stack two Font Awesome Icons -->
+                <h1 class="h1-header" href="/index">
+                <span class="fa-stack fa-1x" style="transform: scale(0.8)">
+                    <i class="fa fa-square-full fa-stack-1x light" style="color: var(--pep-gray); transform: scale(1.5)"></i>
+                    <i class="fab fab fa-black-tie fa-stack-2x" style="color: var(--pep-yellow)"></i>
+               </span>
+                    <span style="color: var(--pep-gray)">Physi</span><span style="color: var(--maincolor)">Kon</span>
+                </h1>
+            <!--TU & Fakultät Physik Logo -->
+            <div class="text-center ml-5">
+                <div class="logo">
+            <img class="mb-4" src="img/tu-dortmund-logo.svg" alt="" style="width: 80%; background-color: white"></div>
+                <div class="logo">
+            <img class="mb-4" src="img/tu-dortmund-logo.svg" alt="" style="width: 80%; background-color: white"></div>
+            </div>
+            </div>
+
+
 
         <h1 class="mb-0">Jobmesse für Physikstudierende</h1>
         <hr class="star-light">
 
 
 
-        <div class="container">
+    <div class="container">
         <div class="row">
             <div class="col lg-2">
 
