header geändert; tu + f(p) logo hinzugefügt

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,22 +3,22 @@
 
             <!-- Webseiten-Logo -->
             <!-- Kombination aus fa-black-tie, Schriftzug und TU-Logo -->
-            <div class="jumbotron jumbotron-fluid physikon-jumbotron">
+            <div class="jumbotron jumbotron-fluid physikon-jumbotron mb-5">
 
             <!-- Stack two Font Awesome Icons -->
                 <h1 class="h1-header" href="/index">
-                <span class="fa-stack fa-1x" style="transform: scale(0.8)">
-                    <i class="fa fa-square-full fa-stack-1x light" style="color: var(--pep-gray); transform: scale(1.5)"></i>
+                <span class="fa-stack fa-1x" style="transform: scale(0.8); margin-right: -10px">
+                    <i class="fa fa-square-full fa-stack-1x light" style="color: white; transform: scale(1.5)"></i>
                     <i class="fab fab fa-black-tie fa-stack-2x" style="color: var(--pep-yellow)"></i>
                </span>
-                    <span style="color: var(--pep-gray)">Physi</span><span style="color: var(--maincolor)">Kon</span>
+                    <span style="color: var(--pep-gray)">Physi</span><span style="color: var(--pep-yellow)">Kon <span style="color: var(--pep-gray)">2019</span>
                 </h1>
             <!--TU & Fakultät Physik Logo -->
             <div class="text-center ml-5">
                 <div class="logo">
             <img class="mb-4" src="img/tu-dortmund-logo.svg" alt="" style="width: 80%; background-color: white"></div>
                 <div class="logo">
-            <img class="mb-4" src="img/tu-dortmund-logo.svg" alt="" style="width: 80%; background-color: white"></div>
+            <img class="mb-4" src="img/logo_fakultaet.svg" alt="" style="width: 80%; background-color: white"></div>
             </div>
             </div>
 
