--- a/css/custom.css
+++ b/css/custom.css
@@ -235,13 +235,14 @@ a {
   position: relative;
   /*background-color: var(--pep-gray);*/
   background-color: white;
-  border-radius: 5px;
+  /*border-radius: 5px;*/
   margin-left: auto;
   margin-right: auto;
   width: 100%;
   font-size: 22px;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
   padding-top: 25px;
+  margin-top: 40px;
 
 }
 
