--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,9 +7,9 @@
 
             <!-- Stack two Font Awesome Icons -->
                 <h1 class="h1-header" href="/index">
-                <span class="fa-stack fa-1x" style="transform: scale(0.8); margin-right: -10px">
-                    <i class="fa fa-square-full fa-stack-1x light" style="color: white; transform: scale(1.5)"></i>
-                    <i class="fab fab fa-black-tie fa-stack-2x" style="color: var(--pep-yellow)"></i>
+                <span class="fa-stack fa-1x" style="transform: scale(0.8); margin-right: -0.5em">
+                    <i class="fa fa-square-full fa-stack-1x light" style="color: var(--pep-yellow); transform: scale(1.5)"></i>
+                    <i class="fab fab fa-black-tie fa-stack-2x" style="color: white"></i>
                </span>
                     <span style="color: var(--pep-gray)">Physi</span><span style="color: var(--pep-yellow)">Kon <span style="color: var(--pep-gray)">2019</span>
                 </h1>
@@ -46,7 +46,7 @@
     </div>
 
         <h2 class="mb-0" style="font-size: 2rem"><p>Dann komm vorbei! </p></h1>
-<!-- 
+<!--
         <h2 class="font-weight-light mb-0"><p>Unternehmen aus der Umgebung stellen sich vor und dich ein</p></h2> -->
 
 <!--         <h2 class="mb-0"><p>Am <span style="color: var(--pep-yellow)">11. April 2019</span> veranstaltet PeP et al. die erste Jobmesse für Physiker/innen an der TU Dortmund. </p></h2> -->
