--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,16 +3,16 @@
       <div class="container">
 
         <!-- Workaround Pep-Logo (fa-stack) -->
-        <span class="fa-stack js-scroll-trigger" style="transform: scale(1.3); margin-right: 15px">
-          <i class="fa fa-square-full fa-stack-1x" style="color: white; transform: scale(1.5)"></i>
-           <i class="fab fab fa-black-tie fa-stack-2x" style="color: var(--pep-yellow)"></i>
+        <span class="fa-stack js-scroll-trigger" style="transform: scale(1.3); margin-right: 0.5em">
+          <i class="fa fa-square-full fa-stack-1x" style="color: var(--pep-yellow); transform: scale(1.5)"></i>
+           <i class="fab fab fa-black-tie fa-stack-2x" style="color: var(--pep-gray)"></i>
          </span>
 
         <a class="navbar-brand js-scroll-trigger" href="/index">Physi<span style="color: var(--maincolor)">Kon</span> 2019</a>
 
         <!-- TU Logo -->
         <!-- <img class="tu-logo" src="/img/tu-dortmund-logo.svg"> -->
-   
+
         <!-- Navbar (mobile) -->
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fas fa-bars"></i>
